--- a/dom/animation/test/mochitest.ini
+++ b/dom/animation/test/mochitest.ini
@@ -43,6 +43,7 @@ skip-if = (toolkit == 'android' && debug) || (os == 'win' && bits == 64) # Bug 1
 [mozilla/test_distance_of_path_function.html]
 [mozilla/test_distance_of_transform.html]
 [mozilla/test_document_timeline_origin_time_range.html]
+[mozilla/test_filling_on_compositor.html]
 [mozilla/test_hide_and_show.html]
 [mozilla/test_moz_prefixed_properties.html]
 [mozilla/test_pending_animation_tracker.html]
