--- a/dom/animation/test/chrome.ini
+++ b/dom/animation/test/chrome.ini
@@ -13,6 +13,7 @@ support-files =
 # file_animate_xrays.html needs to go in mochitest.ini since it is served
 # over HTTP
 [chrome/test_keyframe_effect_xrays.html]
+[chrome/test_animation_collapsing.html]
 [chrome/test_animation_observers_async.html]
 [chrome/test_animation_observers_sync.html]
 [chrome/test_animation_performance_warning.html]
