--- a/dom/animation/test/chrome.ini
+++ b/dom/animation/test/chrome.ini
@@ -19,6 +19,7 @@ support-files =
 [chrome/test_animation_performance_warning.html]
 [chrome/test_animation_properties.html]
 [chrome/test_cssanimation_missing_keyframes.html]
+[chrome/test_fillanimation_recycling.html]
 [chrome/test_generated_content_getAnimations.html]
 [chrome/test_running_on_compositor.html]
 [chrome/test_simulate_compute_values_failure.html]
